--- a/WS2001.md
+++ b/WS2001.md
@@ -1,5 +1,16 @@
-> 预白化技术详解
-> 参考Wang and Swail (2001, Appendix A) iterative method (WS2001),
-> 严中伟，华丽娟，钱诚等. 2024. 气候统计方法和应用. 北京：科学出版社
-> Wang X L, Swail V R, 2001. Changes of Extreme Wave Heights in Northern Hemisphere Oceans and Related Atmospheric Circulation Regimes[J]. Journal of Climate, 14(10): 2204-2221.
-> 本文仅是个人学习所用，欢迎引用
+> 预白化技术详解  
+> 参考Wang and Swail (2001, Appendix A) iterative method (WS2001)  
+> 严中伟，华丽娟，钱诚等. 2024. 气候统计方法和应用. 北京：科学出版社  
+> Wang X L, Swail V R, 2001. Changes of Extreme Wave Heights in Northern Hemisphere Oceans and Related Atmospheric Circulation Regimes[J]. Journal of Climate, 14(10): 2204-2221.  
+> 参考![视频](https://www.bilibili.com/video/BV1jUgNzHEYh/?spm_id_from=333.337.search-card.all.click&vd_source=5963975aa8896fa787ad2749d412eb17)学习有偏和无偏  
+> 本文仅是个人学习所用，欢迎引用  
+## 有偏和无偏
+有偏和无偏的定义是指样本的统计量是否能够反映总体的特征，举例：
+1. $E(\overline{X})=\mu$ 平均值是无偏的
+   证明如下：  
+   假设
+3. $s^2=\frac{1}{n-1}\sum^{n}_{i=1}(X_i-\overline{X})^2$  对于方差而言就是有偏的，所以使用了n-1作为无偏方差
+   
+   原因如下：  
+   由于使用了 $\overline{X}$ 代表 $\mu$ ，所以减少了自由度，使得最后一个 $X_n$ 是确定的。  
+   假设 $s_n^2=\frac{1}{n}\sum^{n}_{i=1}(X_i-\overline{X})^2$ ，那么 $E(s_n^2)=$  
