--- a/WS2001.md
+++ b/WS2001.md
@@ -7,10 +7,8 @@
 ## 有偏和无偏
 有偏和无偏的定义是指样本的统计量是否能够反映总体的特征，举例：
 1. $E(\overline{X})=\mu$ 平均值是无偏的
-   证明如下：  
-   假设
 3. $s^2=\frac{1}{n-1}\sum^{n}_{i=1}(X_i-\overline{X})^2$  对于方差而言就是有偏的，所以使用了n-1作为无偏方差
    
    原因如下：  
-   由于使用了 $\overline{X}$ 代表 $\mu$ ，所以减少了自由度，使得最后一个 $X_n$ 是确定的。  
+   由于使用了 $\overline{X}$ 代表 $\mu$ ，即使用residual vector代替了error vector，所以减少了自由度，使得最后一个 $X_n$ 是确定的。  
    假设 $s_n^2=\frac{1}{n}\sum^{n}_{i=1}(X_i-\overline{X})^2$ ，那么 $E(s_n^2)=$  
